map legend spacing fixed

--- a/Template/css/style.css
+++ b/Template/css/style.css
@@ -63,7 +63,7 @@ h3 {
     height: 120px;
 }
 #first-amendment-info{
-    height: 500px;
+    height: 600px;
 }
 
 #flag {
@@ -186,7 +186,7 @@ h3 {
 
 #line-graphs {
     width: 100%;
-    height: 500px;
+    height: 600px;
 }
 
 #linegraph-description{
@@ -195,7 +195,7 @@ h3 {
 
 
 #mapViz {
-    height: 550px;
+    height: 640px;
 }
 
 #map .usmap{
@@ -331,8 +331,8 @@ a {
 
 }
 #first-amendment:before, #first-amendment:after {
-    font-size: 4em;
-    position: absolute;
+    font-size: 3.5em;
+    position: absolute
 }
 #first-amendment:before {
     content: open-quote;
@@ -343,6 +343,10 @@ a {
     content: close-quote;
     right: 1.09em;
     bottom: -0.8em;
+}
+
+blockquote {
+    padding-right: 65px;
 }
 
 /*********************/
